my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ECSADD/ECSADD.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECSADD.dml:11:7: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECSADD.dml:16:32: error ECSADD: non-constant strings cannot be concatenated using '+'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECSADD.dml:18:31: error ECSADD: non-constant strings cannot be concatenated using '+'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECSADD.dml:20:43: error ECSADD: non-constant strings cannot be concatenated using '+'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECSADD.dml:22:49: error ECSADD: non-constant strings cannot be concatenated using '+'
